# cao

./: .gitignore  .slugignore  Aptfile  CLAUDE.md  Procfile  package.json  playwright.config.ts  pnpm-lock.yaml  requirements.txt  tsconfig.json  vitest.config.ts  vitest.integration.config.ts
backend/: .env.example  Procfile  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  main.py  worker.py
backend/app/models/: __init__.py  schemas.py
backend/app/routers/: analyze.py  blend.py  generation.py  health.py  morph.py  share.py  shared.py  simulations.py  swap.py  video.py  webhooks.py
backend/app/services/: __init__.py  auth.py  blend_video_generator.py  encryption.py  face_detection.py  face_parsing.py  job_queue.py  morphing.py  part_blender.py  part_blender_3d.py  pipeline.py  replicate_client.py  share_image_generator.py  supabase_client.py  swap_cache.py  swap_compositor.py  video_generator.py
backend/app/utils/: image.py
backend/models/: .gitignore  README.md
backend/tests/: conftest.py  test_analyze.py  test_blend_video_local.py  test_health.py  test_morph.py
backend/tests/integration/: test_blend_api.py  test_share_api.py  test_swap_api.py
backend/tests/unit/: test_generation_api.py  test_part_blender.py  test_replicate_client.py  test_share_image_generator.py  test_swap_cache.py  test_swap_compositor.py  test_swap_worker.py
docs/: business-spec.md  environment-setup.md  functional-spec.md  product-concept.md  setup-guide.md  system-architecture.md
frontend/: .env.example  .env.test  (+10 more)
(+185 files in other folders)
