[project]
name = "cao-backend"
version = "1.0.0"
description = "Cao - AI Face Analysis and Morphing Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "opencv-python-headless>=4.9.0.80",
    "mediapipe>=0.10.9",
    "pillow>=10.2.0",
    "numpy>=1.26.0",
    "slowapi>=0.1.9",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # allow function calls in argument defaults (FastAPI File, Form, etc.)
    "B905",  # allow zip() without strict= (not needed for same-length iteration)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
